--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" >
   <head>
     <meta charset="utf-8">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
@@ -12,6 +12,7 @@
       @import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500');
       </style>
 <script async defer src="https://buttons.github.io/buttons.js"></script>
+<script src="dist/clipboard.min.js"></script>
     <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/web-app-manifest/
